--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,87 +1,210 @@
-- name: Unity - Builder
-  # You may pin to the exact commit or the version.
-  # uses: game-ci/unity-builder@9f79830454d37cd9e70c4c3b73d26c06bcce2b2a
-  uses: game-ci/unity-builder@v2.1.2
-  with:
-    # Platform that the build should target.
-    targetPlatform: # default is 
-    # Version of unity to use for building the project. Use "auto" to get from your ProjectSettings/ProjectVersion.txt
-    unityVersion: # optional, default is auto
-    # Specific docker image that should be used for building the project
-    customImage: # optional, default is 
-    # Relative path to the project to be built.
-    projectPath: # optional, default is 
-    # Name of the build.
-    buildName: # optional, default is 
-    # Path where the builds should be stored.
-    buildsPath: # optional, default is 
-    # Path to a Namespace.Class.StaticMethod to run to perform the build.
-    buildMethod: # optional, default is 
-    # Custom parameters to configure the build.
-    customParameters: # optional, default is 
-    # The versioning scheme to use when building the project
-    versioning: # optional, default is Semantic
-    # The version, when used with the "Custom" versioning scheme
-    version: # optional, default is 
-    # The android versionCode
-    androidVersionCode: # optional, default is 
-    # Whether to build .aab instead of .apk
-    androidAppBundle: # optional, default is false
-    # The android keystoreName
-    androidKeystoreName: # optional, default is 
-    # The base64 contents of the android keystore file
-    androidKeystoreBase64: # optional, default is 
-    # The android keystorePass
-    androidKeystorePass: # optional, default is 
-    # The android keyaliasName
-    androidKeyaliasName: # optional, default is 
-    # The android keyaliasPass
-    androidKeyaliasPass: # optional, default is 
-    # The android target API level.
-    androidTargetSdkVersion: # optional, default is 
-    # SSH Agent path to forward to the container
-    sshAgent: # optional, default is 
-    # Github private token to pull from github
-    gitPrivateToken: # optional, default is 
-    # User and optionally group (user or user:group or uid:gid) to give ownership of the resulting build artifacts
-    chownFilesTo: # optional, default is 
-    # Allows the branch of the build to be dirty, and still generate the build.
-    allowDirtyBuild: # optional, default is 
-    # run a post build job in yaml format with the keys image, secrets (name, value object array), command string
-    postBuildSteps: # optional, default is 
-    # Run a pre build job after the repository setup but before the build job (in yaml format with the keys image, secrets (name, value object array), command line string)
-    preBuildSteps: # optional, default is 
-    # Specify custom commands and trigger hooks (injects commands into jobs)
-    customJobHooks: # optional, default is 
-    # Run a custom job instead of the standard build automation for cloud runner (in yaml format with the keys image, secrets (name, value object array), command line string)
-    customJob: # optional, default is 
-    # The Cloud Formation stack name that must be setup before using this option.
-    awsBaseStackName: # optional, default is game-ci
-    # Either local, k8s or aws can be used to run builds on a remote cluster. Additional parameters must be configured.
-    cloudRunnerCluster: # optional, default is local
-    # Amount of CPU time to assign the remote build container
-    cloudRunnerCpu: # optional, default is 
-    # Amount of memory to assign the remote build container
-    cloudRunnerMemory: # optional, default is 
-    # A command run every time a file is pushed to cache, formatted with input file path and remote cache path
-    cachePushOverrideCommand: # optional, default is 
-    # A command run every time before a file is being pulled from cache, formatted with request cache file and destination path
-    cachePullOverrideCommand: # optional, default is 
-    # Comma separated list of input value names to read from "input override command"
-    readInputFromOverrideList: # optional, default is 
-    # Extend game ci by specifying a command to execute to pull input from external source e.g cloud provider secret managers
-    readInputOverrideCommand: # optional, default is 
-    # Supply a base64 encoded kubernetes config to run builds on kubernetes and stream logs until completion.
-    kubeConfig: # optional, default is 
-    # Supply a Persistent Volume Claim name to use for the Unity build.
-    kubeVolume: # optional, default is 
-    # Kubernetes storage class to use for cloud runner jobs, leave empty to install rook cluster.
-    kubeStorageClass: # optional, default is 
-    # Amount of disc space to assign the Kubernetes Persistent Volume
-    kubeVolumeSize: # optional, default is 5Gi
-    # Cache key to indicate bucket for cache
-    cacheKey: # optional, default is 
-    # Use to specify a way to check depdency services health to enable resilient self-starting jobs
-    checkDependencyHealthOverride: # optional, default is 
-    # Use to specify a way to start depdency services health to enable resilient self-starting jobs
-    startDependenciesOverride: # optional, default is 
+name: GameCI Template 🎮
+
+on: push
+
+env:
+  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+
+jobs:
+  testRunner:
+    name: Test in ${{ matrix.testMode }} ✨
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        testMode:
+          - EditMode
+          - PlayMode
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Create LFS file list
+        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+
+      - name: Restore LFS cache
+        uses: actions/cache@v2
+        id: lfs-cache
+        with:
+          path: .git/lfs
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+
+      - name: Git LFS Pull
+        run: |
+          git lfs pull
+          git add .
+          git reset --hard
+
+      - name: Restore Library cache
+        uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-test-project-${{ matrix.targetPlatform }}
+          restore-keys: |
+            Library-test-project-
+            Library-
+
+      - name: Run tests
+        uses: game-ci/unity-test-runner@v2
+        id: testRunner
+        with:
+          testMode: ${{ matrix.testMode }}
+          checkName: ${{ matrix.testMode }} test results
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Test results (${{ matrix.testMode }})
+          path: ${{ steps.testRunner.outputs.artifactsPath }}
+
+  buildWebGL:
+    needs: testRunner
+    name: Build for WebGL 🖥️
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Create LFS file list
+        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+
+      - name: Restore LFS cache
+        uses: actions/cache@v2
+        id: lfs-cache
+        with:
+          path: .git/lfs
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+
+      - name: Git LFS Pull
+        run: |
+          git lfs pull
+          git add .
+          git reset --hard
+
+      - name: Restore Library cache
+        uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-build-WebGL
+          restore-keys: |
+            Library-build-
+            Library-
+
+      - uses: game-ci/unity-builder@v2
+        with:
+          targetPlatform: WebGL
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-WebGL
+          path: build/WebGL
+
+  buildWindows:
+    needs: testRunner
+    name: Build for Windows 🖥️
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Create LFS file list
+        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+
+      - name: Restore LFS cache
+        uses: actions/cache@v2
+        id: lfs-cache
+        with:
+          path: .git/lfs
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+
+      - name: Git LFS Pull
+        run: |
+          git lfs pull
+          git add .
+          git reset --hard
+
+      - name: Restore Library cache
+        uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-build-StandaloneWindows64
+          restore-keys: |
+            Library-build-
+            Library-
+
+      - uses: game-ci/unity-builder@v2
+        with:
+          targetPlatform: StandaloneWindows64
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-StandaloneWindows64
+          path: build/StandaloneWindows64
+
+  buildAndroid:
+    needs: testRunner
+    name: Build for Android 📱
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Create LFS file list
+        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+
+      - name: Restore LFS cache
+        uses: actions/cache@v2
+        id: lfs-cache
+        with:
+          path: .git/lfs
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+
+      - name: Git LFS Pull
+        run: |
+          git lfs pull
+          git add .
+          git reset --hard
+
+      - name: Restore Library cache
+        uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-build-Android
+          restore-keys: |
+            Library-build-
+            Library-
+
+      - uses: game-ci/unity-builder@v2
+        with:
+          targetPlatform: Android
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-Android
+          path: build/Android
+
+
+  deployPages:
+    needs: buildWebGL
+    name: Deploy to Github Pages 🚀
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: build-WebGL
+          path: build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: build/WebGL
